--- a/app/views/forms/welcome.html.erb
+++ b/app/views/forms/welcome.html.erb
@@ -1,11 +1,11 @@
 
-<h1>What type of forms are your looking for?</h1>
+<!-- <h1>What type of forms are your looking for?</h1>
 
 <ul class="nav nav-pills" >
-  <li><%= link_to 'All Forms', forms_path %></li>
-  <li><%= link_to 'By Municipality', municipalities_path %></li>
-  <li><%= link_to 'By Department', departments_path %></li>
-  <li><%#= link_to 'Resources', resources_path %></li>
+  <li><%#= link_to 'All Forms', forms_path %></li>
+  <li><%#= link_to 'By Municipality', municipalities_path %></li>
+  <li><%#= link_to 'By Department', departments_path %></li>
+  <li><%#= link_to 'Resources', resources_path %></li> -->
 	<br>
 
 	<%= render 'recent' %>
