--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -30,7 +30,7 @@
     <% @forms.each do |form| %>
       <tr>
         <td><%= link_to form.form_name, form.form_link %></td>
-        <td><%= form.municipality.name %></td>
+        <td><%= form.municipality.municipality %></td>
         <td><%= form.municipality.state.state %></td>
         <td><%= form.department.department %></td>
         <% if user_signed_in? %>
