--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -30,16 +30,8 @@
     <% @forms.each do |form| %>
       <tr>
         <td><%= link_to form.form_name, form.form_link %></td>
-        <%# if form.municipality.name != nil %>
-        <td><%#= form.municipality.name %></td>
-        <%# else %>
-       <!--  <p>Delete</p> -->
-        <%# end %>
-        <%# if form.municipality.state.state != nil %>
-        <td><%#= form.municipality.state.state %></td>
-        <%# else %>
-       <!--  <p>Delete</p> -->
-        <%# end %>
+        <td><%= form.municipality.name %></td>
+        <td><%= form.municipality.state.state %></td>
         <td><%= form.department.department %></td>
         <% if user_signed_in? %>
         <td><%#= link_to "upvote", like_form_path(form), method: :put %>
