--- a/app/views/municipalities/_form.html.erb
+++ b/app/views/municipalities/_form.html.erb
@@ -18,12 +18,18 @@
      <%= f.text_field :name, class: "form-control input-lg", placeholder: "Municipality Name"  %>
     </div>
   </div>
+
+
   <div class="form-group input-lg">
     <div class="controls">
+    <!-- div class="  dropdown  input-lg"> -->
+ <!--      <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu"> -->
       <%#= f.label :state %>
       <%= f.collection_select(:municipality_type, Municipality::MUNICIPALITY_TYPE, :to_s, :to_s) %>
+   <!--  </ul> -->
     </div>
   </div>
+
   <div class="form-group input-lg">
     <div class="controls">
       <%#= f.label :state %>
@@ -36,7 +42,17 @@
       <%= f.number_field :population, class: "form-control input-lg", placeholder: "Population"  %>
     </div>
   </div>
-
+  <!-- <br><br>
+  <div>
+    <h4>Optional:</h4>
+  </div> -->
+  <div class="form-group form-group-lg">
+    <div class="col-sm-6">
+     <%#= f.label :name %><br>
+     <%= f.text_field :forms_page, class: "form-control input-lg", placeholder: "City Form Page: http://website.com"  %>
+    </div>
+  </div>
+  <br>
   <div class="actions">
     <%= f.submit "Save Municipality", class: "btn btn-primary"%>
   </div>
