--- a/app/views/municipalities/index.html.erb
+++ b/app/views/municipalities/index.html.erb
@@ -18,15 +18,21 @@
   </div>
 
 
-
-  <div>
+<div>
+  <div col-md-6>
   <%= form_tag('/municipalities', method: :get) do %>
   <%= select_tag 'state_id', options_for_select(@dropdown.map{ |s| [s.state, s.id]}), class: "btn btn-default btn-lg dropdown-toggle"  %>
   <%= submit_tag "Search", class: "btn btn-default" %>
   <%= link_to "Reset", municipalities_path, class: "btn btn-default" %>
+  <%= button_tag 'Counties Only', name: "municipality_type", value: "County", class: "btn btn-default pull-right" %>
+
+  
   <% end %>
   </div>
+  <div col-md-3>
 
+  </div>
+</div>
 <!-- <div class="panel panel-info"> -->
 <div class="pannel">
   <table class="table table-hover">
