fixed search by state and county

--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -3,8 +3,8 @@
   <tr>
       <%= form_for 'forms_path', method: :get do %>
 
-      <%= text_field_tag :query, params[:query], class: "form-control col-lg-4" %>
-      <%= submit_tag "Search", :form_name => nil, class: "btn btn-default"%>
+      <td><%= text_field_tag :query, params[:query], class: "form-control col-lg-4" %></td>
+      <td><%= submit_tag "Search", :form_name => nil, class: "btn btn-default"%></td>
       <%= link_to "Reset", forms_path, class: "btn btn-default" %>
 
       <% end %>
