--- a/app/views/forms/show.html.erb
+++ b/app/views/forms/show.html.erb
@@ -17,7 +17,7 @@
 <div class="panel-body">
 <p>
   <strong>Municipality name:</strong>
-  <%= @form.municipality.municipality %>
+  <%= @form.municipality.name %>
 </p>
 </div>
 
