--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -5,7 +5,7 @@
   <thead>
     <tr>
       <th>Department</th>
-      <th colspan="3"></th>
+      <!-- <th colspan="3"></th> -->
     </tr>
   </thead>
   </div>
