--- a/app/views/forms/_recent.html.erb
+++ b/app/views/forms/_recent.html.erb
@@ -10,14 +10,14 @@
       <th>Municipality</th>
       <th>State</th>
       <th>Department</th>
-      <th colspan="3"></th>
+      <!-- <th colspan="3"></th> -->
     </tr>
   </thead>
   </div>
  
   <tbody>
     <% @forms.each do |form| %>
-      <tr>
+      <tr <% if form.has_payment == true %>class="success">
         <td><%= link_to form.form_name, form.form_link %></td>
         <td><%= form.municipality.name %></td>
         <td><%= form.municipality.state.state %></td>
@@ -30,6 +30,7 @@
         <td><%= link_to 'Destroy', form, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
+      <% end %>
     <% end %>
   </tbody>
 </table>
