--- a/app/views/municipalities/index.html.erb
+++ b/app/views/municipalities/index.html.erb
@@ -45,7 +45,7 @@
               <th>Municipality</th>
               <th>State</th>
               <th><%= sort_link 'Population', :population %></th>
-              <th colspan="3"></th>
+             <!--  <th colspan="3"></th> -->
             </tr>
           </thead>
         </div>
@@ -65,16 +65,18 @@
                 <td><%= link_to 'Edit', edit_municipality_path(municipality) %></td>
                 <td><%= link_to 'Destroy', municipality, method: :delete, data: { confirm: 'Are you sure?' } %></td>
               <% end %>
+              <tr>
               <% if @present != nil %>
                 <% municipality.forms.each do |form| %>
-                <tr>
+                <tr <% if form.has_payment == true %>class="success">
                   <td class:"col-md-3 col-md-offset-3"></td>
                   <td class:"col-md-3 col-md-offset-3"><%= link_to form.form_name, form.form_link %></td>
                   <td class:"col-md-3 col-md-offset-3"><%= form.department.department %></td>
-                  <td class:"col-md-3 col-md-offset-3"></td>
+                  <!-- <td class:"col-md-3 col-md-offset-3"></td> -->
                 <% end %>  
               <% end %>  
                 <tr>
+                <% end %>
           <% end %>
     </div>           
              
