Added has_payment to forms

--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -33,7 +33,10 @@
   <tbody>
     <% @forms.each do |form| %>
       
-      <tr <% if form.has_payment == true %>class="success">
+      <% if form.has_payment == true %>
+      <tr class="success">
+      <% else %>
+      <tr><% end %>
         <td><%= link_to form.form_name, form.form_link %></td>
         <td><%= form.municipality.name %></td>
         <td><%= form.municipality.state.state %></td>
@@ -46,7 +49,7 @@
         <% end %>
 
       </tr> 
-      <% end %>
+      
     <% end %>
   </tbody>
 </table>
