--- a/app/views/forms/_recent.html.erb
+++ b/app/views/forms/_recent.html.erb
@@ -17,7 +17,11 @@
  
   <tbody>
     <% @forms.each do |form| %>
-      <tr <% if form.has_payment == true %>class="success">
+      <% if form.has_payment == true %>
+      <tr class="success">
+      <% else %>
+      <tr>
+      <% end %>
         <td><%= link_to form.form_name, form.form_link %></td>
         <td><%= form.municipality.name %></td>
         <td><%= form.municipality.state.state %></td>
@@ -30,7 +34,7 @@
         <td><%= link_to 'Destroy', form, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
-      <% end %>
+      
     <% end %>
   </tbody>
 </table>
