--- a/app/views/municipalities/index.html.erb
+++ b/app/views/municipalities/index.html.erb
@@ -68,7 +68,11 @@
               <tr>
               <% if @present != nil %>
                 <% municipality.forms.each do |form| %>
-                <tr <% if form.has_payment == true %>class="success">
+                <% if form.has_payment == true %>
+                  <tr class="success">
+                  <% else %>
+                  <tr>
+                  <% end %>
                   <td class:"col-md-3 col-md-offset-3"></td>
                   <td class:"col-md-3 col-md-offset-3"><%= link_to form.form_name, form.form_link %></td>
                   <td class:"col-md-3 col-md-offset-3"><%= form.department.department %></td>
@@ -76,7 +80,7 @@
                 <% end %>  
               <% end %>  
                 <tr>
-                <% end %>
+                
           <% end %>
     </div>           
              
