Added edit link to forms on muni index

--- a/app/views/municipalities/index.html.erb
+++ b/app/views/municipalities/index.html.erb
@@ -76,6 +76,9 @@
                   <td class:"col-md-3 col-md-offset-3"></td>
                   <td class:"col-md-3 col-md-offset-3"><%= link_to form.form_name, form.form_link %></td>
                   <td class:"col-md-3 col-md-offset-3"><%= form.department.department %></td>
+                  <% if user_signed_in? %>
+                    <td class:"col-md-3 col-md-offset-3"><%= link_to 'Edit', edit_form_path(form) %></td>
+                  <% end %>
                   <!-- <td class:"col-md-3 col-md-offset-3"></td> -->
                 <% end %>  
               <% end %>  
