--- a/app/views/municipalities/index.html.erb
+++ b/app/views/municipalities/index.html.erb
@@ -44,6 +44,7 @@
             <tr class="panel-title panel-info">
               <th>Municipality</th>
               <th>State</th>
+              <th>County</th>
               <th><%= sort_link 'Population', :population %></th>
              <!--  <th colspan="3"></th> -->
             </tr>
@@ -55,13 +56,22 @@
 
   <tbody>
     <div class="form-group">
-          <% @municipalities.sort { |a,b| a.name <=> b.name }.each do |municipality| %>
+      
+
+
+          <% @municipalities.sort { |a,b| a.state_id <=> b.state_id }.each do |municipality| %>
             <tr class="active">
               <td><%= link_to municipality.name, municipality_path(municipality) %></td>
               <td><%= municipality.state.state %></td>
+              <% if municipality.city_county != nil %>
+                <td><%= municipality.city_county %></td>
+                <% else %>
+                <td></td>
+              <% end %>
+                  
               <td><%= municipality.population %></td>
               <% if user_signed_in? %>
-                <td><%= link_to 'Show', municipality %></td>
+                <td><%#= link_to 'Show', municipality %></td>
                 <td><%= link_to 'Edit', edit_municipality_path(municipality) %></td>
                 <td><%= link_to 'Destroy', municipality, method: :delete, data: { confirm: 'Are you sure?' } %></td>
               <% end %>
@@ -75,6 +85,7 @@
                   <% end %>
                   <td class:"col-md-3 col-md-offset-3"></td>
                   <td class:"col-md-3 col-md-offset-3"><%= link_to form.form_name, form.form_link %></td>
+                  <td class:"col-md-3 col-md-offset-3"><%= form.department.department %></td>
                   <td class:"col-md-3 col-md-offset-3"><%= form.department.department %></td>
                   <% if user_signed_in? %>
                     <td class:"col-md-3 col-md-offset-3"><%= link_to 'Edit', edit_form_path(form) %></td>
