Added county to muni show page

--- a/app/views/municipalities/show.html.erb
+++ b/app/views/municipalities/show.html.erb
@@ -12,8 +12,12 @@
 <%# end %>
 	<div class="pull-right">
 		<br>
-		<h4>State:<%= @municipality.state.state %></h4>
+		<h4><%= @municipality.state.state %></h4>
+		<% if @municipality.city_county != nil %>
+			<h4><%= @municipality.city_county %></h4>
+		<% end %>
 		<h4><%= @municipality.population %></h4>
+		
 		<% if @municipality.forms_page != nil %>
 			<h4><%= link_to 'Forms Page', @municipality.forms_page %></h4>
 		<% end %>
