--- a/app/views/municipalities/index.html.erb
+++ b/app/views/municipalities/index.html.erb
@@ -43,9 +43,16 @@
           <thead>
             <tr class="panel-title panel-info">
               <th>Municipality</th>
+              <% if params[:state_id] != nil %>
               <th>State</th>
               <th>County</th>
+              <% else %>
+              <th></th>
+              <th></th>
+              <% end %>
               <th><%= sort_link 'Population', :population %></th>
+             
+              
              <!--  <th colspan="3"></th> -->
             </tr>
           </thead>
@@ -62,16 +69,19 @@
           <% @municipalities.sort { |a,b| a.state_id <=> b.state_id }.each do |municipality| %>
             <tr class="active">
               <td><%= link_to municipality.name, municipality_path(municipality) %></td>
-              <td><%= municipality.state.state %></td>
-              <% if municipality.city_county != nil %>
+              <% if params[:state] == nil %>
+                <td><%= municipality.state.state %></td>  
+                <% if municipality.city_county != nil %>
                 <td><%= municipality.city_county %></td>
-                <% else %>
+                <% end %>
+              <% else %>      
                 <td></td>
               <% end %>
-                  
+             
+                <td></td>
               <td><%= municipality.population %></td>
               <% if user_signed_in? %>
-                <td><%#= link_to 'Show', municipality %></td>
+                <!-- <td><%#= link_to 'Show', municipality %></td> -->
                 <td><%= link_to 'Edit', edit_municipality_path(municipality) %></td>
                 <td><%= link_to 'Destroy', municipality, method: :delete, data: { confirm: 'Are you sure?' } %></td>
               <% end %>
@@ -83,13 +93,16 @@
                   <% else %>
                   <tr>
                   <% end %>
-                  <td class:"col-md-3 col-md-offset-3"></td>
-                  <td class:"col-md-3 col-md-offset-3"><%= link_to form.form_name, form.form_link %></td>
-                  <td class:"col-md-3 col-md-offset-3"><%= form.department.department %></td>
-                  <td class:"col-md-3 col-md-offset-3"><%= form.department.department %></td>
+                  <td class:"col-md-2 col-md-offset-3"></td>
+                  <td class:"col-md-2 col-md-offset-3"><%= link_to form.form_name, form.form_link %></td>
+                  <td class:"col-md-2 col-md-offset-3"><%= form.department.department %></td>
+                   <td class:"col-md-2 col-md-offset-3"></td>
                   <% if user_signed_in? %>
-                    <td class:"col-md-3 col-md-offset-3"><%= link_to 'Edit', edit_form_path(form) %></td>
+                    <td class:"col-md-2 col-md-offset-3"><%= link_to 'Edit', edit_form_path(form) %></td>
+                    <% else %>
+                    <td class:"col-md-2 col-md-offset-3"></td>
                   <% end %>
+                  <td class:"col-md-2 col-md-offset-3"></td>
                   <!-- <td class:"col-md-3 col-md-offset-3"></td> -->
                 <% end %>  
               <% end %>  
