--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,27 +1,47 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Resources</h1>
 
-<div>
-<h1>Procurement Resources</h1>
-<table>
+
+<div class="pull-left col-sm-6">
+  <h1 class="pull-left">Payment Providers</h1>
+</div>
+
+
+
+
+
+<div class="panel-heading col-sm-6 pull right">
+<h1 class="align-right">Referrals</h1>
+<table class="table table-hover">
 
   <tbody>
-    <% @procurement_resources.each do |resource| %>
-      <%#= render 'display' %>
-      <tr>
-        <td><%= link_to resource.resource, resource.url%></td>
-        
-        <td><%= link_to 'Show', resource %></td>
-        <td><%= link_to 'Edit', edit_resource_path(resource) %></td>
-        <td><%= link_to 'Destroy', resource, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+     <%# if @referral_present != nil %>
+      <% @municipality.each do |municipality| %>
+
+        <% if municipality.referral != nil %>
+          <%= link_to(municipality.referral_url, class: "btn btn-default btn-block") do %>
+              <h3><%= municipality.name %> | <%= municipality.state.state %></h3>
+              <h5><%= municipality.referral %></h5>
+          <% end %>
+          <!-- <tr class="active pull left"> -->
+          <%#= link_to municipality.referral , @referral_url,  %>
+          <!-- <div class="col-sm-2">
+            <button type="button" class="btn btn-default btn-block">
+
+                <h4><%#= municipality.referral %></h4>
+                <h6><%#= municipality.name %>, <%= municipality.state.state %></h6>
+            </button>
+          <br> -->
+        <% end %>
+          
+      <% end %>
   </tbody>
 </table>
 </div>
 
-<h1>All Resources</h1>
+
+
+<!-- <h1>All Resources</h1>
 <table>
   <thead>
     <tr>
@@ -33,25 +53,25 @@
       <th>Genre</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+  </thead> -->
 
-  <tbody>
-    <% @resources.each do |resource| %>
+ <!--  <tbody>
+    <%# @resources.each do |resource| %>
       <tr>
-        <td><%= resource.resource %></td>
-        <td><%= resource.url %></td>
-        <td><%= resource.state %></td>
-        <td><%= resource.municipality %></td>
-        <td><%= resource.department %></td>
-        <td><%= resource.genre %></td>
-        <td><%= link_to 'Show', resource %></td>
-        <td><%= link_to 'Edit', edit_resource_path(resource) %></td>
-        <td><%= link_to 'Destroy', resource, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%#= resource.resource %></td>
+        <td><%#= resource.url %></td>
+        <td><%#= resource.state %></td>
+        <td><%#= resource.municipality %></td>
+        <td><%#= resource.department %></td>
+        <td><%#= resource.genre %></td>
+        <td><%#= link_to 'Show', resource %></td>
+        <td><%#= link_to 'Edit', edit_resource_path(resource) %></td>
+        <td><%#= link_to 'Destroy', resource, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
+    <%# end %>
   </tbody>
 </table>
+<div>
+<br> -->
 
-<br>
-
-<%= link_to 'New Resource', new_resource_path %>
+<%#= link_to 'New Resource', new_resource_path %>
