Fixed muni view, to not show link to forms page if blank

--- a/app/views/municipalities/show.html.erb
+++ b/app/views/municipalities/show.html.erb
@@ -18,7 +18,7 @@
 		<% end %>
 		<h4><%= @municipality.population %></h4>
 		
-		<% if @municipality.forms_page != nil %>
+		<% if @municipality.forms_page != nil && @municipality.forms_page.blank? != true %>
 			<h4><%= link_to 'Forms Page', @municipality.forms_page %></h4>
 		<% end %>
 		<br>
