--- a/app/views/forms/_recent.html.erb
+++ b/app/views/forms/_recent.html.erb
@@ -22,7 +22,7 @@
       <% else %>
       <tr>
       <% end %>
-        <td><%= link_to form.form_name, form.form_link %></td>
+        <td><%= link_to form.form_name, form.form_link, :target => "_blank" %></td>
         <td><%= form.municipality.name %></td>
         <td><%= form.municipality.state.state %></td>
 
