--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -37,7 +37,7 @@
       <tr class="success">
       <% else %>
       <tr><% end %>
-        <td><%= link_to form.form_name, form.form_link %></td>
+        <td><%= link_to form.form_name, form.form_link, :target => "_blank" %></td>
         <td><%= form.municipality.name %></td>
         <td><%= form.municipality.state.state %></td>
         <td><%= form.department.department %></td>
