--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -7,7 +7,7 @@
 
 
 <div class="panel-heading pull-left col-sm-6">
-<h1 class="align-left">Payment Providers</h1>
+<h1 class="align-left">Payment Integrations</h1>
 <table class="table table-hover">
     <tbody>
         <% @payment_provider.each do |payment_provider| %>
