Added form Count

--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -15,7 +15,7 @@
 </div>
 
 
-<div class="panel-heading">All Forms</div>
+<div class="panel-heading"><%= Form.count %> Forms</div>
 
 <table class="table table-hover">
  
