--- a/app/views/departments/show.html.erb
+++ b/app/views/departments/show.html.erb
@@ -16,7 +16,7 @@
   <tbody>
     <% @department.forms.each do |form| %>
       <tr>
-        <td><%= link_to form.form_name, form.form_link %></td>
+        <td><%= link_to form.form_name, form.form_link, :target => '_blank' %></td>
         <td><%= form.municipality.name %></td>
         <td><%= form.municipality.state.state %></td>
   
