--- a/app/views/municipalities/index.html.erb
+++ b/app/views/municipalities/index.html.erb
@@ -95,7 +95,7 @@
                   <tr>
                   <% end %>
                   <td class:"col-md-2 col-md-offset-3"></td>
-                  <td class:"col-md-2 col-md-offset-3"><%= link_to form.form_name, form.form_link %></td>
+                  <td class:"col-md-2 col-md-offset-3"><%= link_to form.form_name, form.form_link, :target => '_blank' %></td>
                   <td class:"col-md-2 col-md-offset-3"><%= form.department.department %></td>
                    <td class:"col-md-2 col-md-offset-3"></td>
                   <% if user_signed_in? %>
