--- a/app/views/forms/index.html.erb
+++ b/app/views/forms/index.html.erb
@@ -9,8 +9,9 @@
     </div>
       <%= submit_tag "Search", :form_name => nil, class: "btn btn-default" %>
       <%= link_to "Reset", forms_path, class: "btn btn-default" %>
-
+      <%= button_tag 'Forms with Payment', name: "has_payment", value: "true", class: "btn btn-default pull-right" %>
       <% end %>
+
   
 </div>
 
