--- a/app/views/municipalities/show.html.erb
+++ b/app/views/municipalities/show.html.erb
@@ -41,7 +41,14 @@
 	<table class="table table-striped">
 		<% @municipality.forms.each do |form| %>
 				<tr>
-					<td class:"col-md-3 col-md-offset-3"><%= link_to form.form_name, form.form_link %></td>
+					<td class:"col-md-3 col-md-offset-3"><%= link_to form.form_name, form.form_link %>
+					  <% if form.is_state == true %>
+			            <span class="badge">S</span>
+			          <% elsif form.is_federal == true %>
+			            <span class="badge">F</span>
+			          <% end %>
+
+					</td>
 					<td class:"col-md-3 col-md-offset-3"><%= link_to form.department.department, form.department.department %></td>
 					<% if user_signed_in? %>
 					<td><%= link_to 'Edit', edit_form_path(form) %></td>
