--- a/app/views/forms/show.html.erb
+++ b/app/views/forms/show.html.erb
@@ -33,6 +33,11 @@
   <strong>Form department:</strong>
   <%= @form.department.department %>
 </p>
+
+<p>
+  <strong>Form Type:</strong>
+  <%= @form.form_type %>
+</p>
 </div>
 </div>
 </div>
