--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 	<li role="presentation"><%= link_to 'FORMS', forms_path %></li>
   	<li role="presentation"><%= link_to 'MUNICIPALITIES', municipalities_path %></li>
   	<li role="presentation"><%= link_to 'DEPARTMENTS', departments_path %></li>
-  	<li role="presentation"><%= link_to 'RESOURCES', resources_path %></li>
+  	<!-- <li role="presentation"><%= link_to 'RESOURCES', resources_path %></li> -->
   	<li role="presentation"><%= link_to 'MAP', 'http://maps.seamlesssell.com/maps/active/', :target => '_blank' %></li>
   	<li role="presentation"><%= link_to 'PARALLEL UNIVERSE', 'http://cat.www2.seamlessdocs.com.meowbify.com/', :target => '_blank' %></li>
 <% if user_signed_in? %>
